@@ -443,16 +443,17 @@
 	<!-- ###SUB_INCLUDED_FIELD_comments### -->
 
 	<!--###SUB_INCLUDED_FIELD_captcha_response###-->
-	<div class="tx-srfeuserregister-pi1-captcha-response">
+	<dt class="tx-srfeuserregister-pi1-captcha-response">
 		<label for="tx-srfeuserregister-pi1-captcha-response">###SR_FREECAP_NOTICE###</label>
 		###SR_FREECAP_CANT_READ###
-		<br />
+	</dt>
+	<dd>
 		<!-- ###SUB_ERROR_FIELD_captcha_response### -->
 		<p class="tx-srfeuserregister-pi1-error">###EVAL_ERROR_FIELD_captcha_response###</p>
 		<!-- ###SUB_ERROR_FIELD_captcha_response### -->
 		<input type="text" size="15" id="tx-srfeuserregister-pi1-captcha-response" name="###NAME_CAPTCHA_RESPONSE###" title="###SR_FREECAP_NOTICE###" value="">
 		###SR_FREECAP_IMAGE###
-	</div>
+	</dd>
 	<!--###SUB_INCLUDED_FIELD_captcha_response###-->
 
 	<dt>&nbsp;</dt>
@@ -1700,16 +1701,17 @@ The user is informed that a message has been sent to the email address and that 
 	<!-- ###SUB_INCLUDED_FIELD_comments### -->
 
 	<!--###SUB_INCLUDED_FIELD_captcha_response###-->
-	<div class="tx-srfeuserregister-pi1-captcha-response">
+	<dt class="tx-srfeuserregister-pi1-captcha-response">
 		<label for="tx-srfeuserregister-pi1-captcha-response">###SR_FREECAP_NOTICE###</label>
 		###SR_FREECAP_CANT_READ###
-		<br />
+	</dt>
+	<dd>
 		<!-- ###SUB_ERROR_FIELD_captcha_response### -->
 		<p class="tx-srfeuserregister-pi1-error">###EVAL_ERROR_FIELD_captcha_response###</p>
 		<!-- ###SUB_ERROR_FIELD_captcha_response### -->
 		<input type="text" size="15" id="tx-srfeuserregister-pi1-captcha-response" name="###NAME_CAPTCHA_RESPONSE###" title="###SR_FREECAP_NOTICE###" value="">
 		###SR_FREECAP_IMAGE###
-	</div>
+	</dd>
 	<!--###SUB_INCLUDED_FIELD_captcha_response###-->
 
 	<dt>&nbsp;</dt>
