@@ -6,6 +6,7 @@
 	* Add feature #36125: Require to remove obsolete infomail markers
 	* Fix bug #36126: email.INFOMAIL_NORECORD = 0 is not honoured
 	* Suggest sr_freecap
+	* Add feature #36129: Adjust HTML markup of captcha subpart of default HTML template
 
 2012-04-14 Stanislas Rolland  <typo3(arobas)sjbr.ca>
 	* Fix bug #36051: RegHash not cleared if link results in auto-login
